Version 0.3.0:
	New features:
	- Added new converters for Big5, Big5-HKSCS, Windows-950, EUC-TW and
	  ISO-2022-CN-EXT (#4).

	Bug fixes:
	- Avoid assuming that the first argument of the compare function used for
	  lfind is the key (#13).
	- Fix clean target in Makefile.in.
	- TRANSCRIPT_SUBST_ILLEGAL now works in ISO-2022 converters.
	- C1 control-code escape sequences now work in all ISO-2022 converters.
	- Correctly skip over escape sequences in ISO-2022 converters if requrested.
	- Fix locking bug in ISO-2022 converter triggered when a sub-converter is
	  not available.

Version 0.2.3:
	Bug fixes:
	- Correct naming of UTF-8 with BOM in compiled name list (is now correctly
	  listed as X-UTF-8-BOM). This allows the UTF-8 with BOM converter to be
	  loaded.

Version 0.2.2:
	New features:
	- Allow finalizing of the library, to allow release of all memory for
	  debugging purposes.
	- Use dlopen/dlsym/dlclose directly if available, instead of using libltdl.

Version 0.2.1:
	Bug fixes:
	- Fix handling of private use handling in unicode to unicode conversions,
	  such that it is in line with the other converters.

Version 0.2.0:
	New features:
	- Added dependency on Pthreads, to allow threading to work properly in all
	  circumstances.
	- Removed auto-initialization, because it was not providing the benefits
	  that were envisaged. Now the library requires calling of transcript_init
	  before any other function.

Version 0.1.1:
	Initial release